force-app/main/default/objects/Import_Batch__c.object
<CustomObject>
    <label>Import Batch</label>
    <nameField>
        <label>Import Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Import Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>