force-app/main/default/objects/Import_Batch__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Employer__c</referenceTo>
    <relationshipLabel>Import Batches</relationshipLabel>
    <relationshipName>Import_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>