force-app/main/default/objects/Import_Batch__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Import_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>