force-app/main/default/objects/Import_Batch__c/fields/Source_File_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_File_Type__c</fullName>
    <label>Source File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>XLS</fullName>
            </value>
            <value>
                <fullName>XLSX</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>